--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 <body>
     <main class="container">
         <div class="steps">
-            <div class="step">1</div>
+            <div class="step circle-active">1</div>
             <div class="step">2</div>
             <div class="step">3</div>
             <div class="step">4</div>
+            <div id="progress"></div>
         </div>
+
+        
+
         <div class="buttons">
             <button disabled id="prev">Prev</button>
             <button id="next">Next</button>
